<resources>
    <string name="app_name" translatable="false">Gape Hogar</string>
    <string name="btn" translatable="false">Ingresar</string>
    <string name="app_description">Login</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Ingrese un password mayor a 6 digitos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="todo">TODO</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="buttonperfil">Perfil</string>


    <!-- UsersDisplay -->


    <string name="Estadotxt">Estado: </string>
    <string name="EstadotxtD"> En linea</string>
    <string name="Direcciontxt">Comuna:  </string>
    <string name="DirecciontxtD"> -- </string>
    <string name="Distancia">Distancia: </string>
    <string name="km">1 Km</string>


    <string name="foto_perfil_dis"> </string>
    <string name="uidPerfilDis"> -- </string>
    <string name="nombresPerfilDis"> -- </string>
    <string name="correoPerfilDis"> -- </string>
    <string name="especialistatxtDis">Especialista: </string>
    <string name="especialistaPerfilDis"> -- </string>
    <string name="emailEnviar"> Chat </string>
    <string name="Especialidad">Elige Especialidad</string>
    <string-array name="Especialidades">
        <item>Pintor</item>
        <item>carpintero</item>
        <item>Gafiter</item>
        <item>Mecánico</item>
        <item>Exterminador</item>
        <item>Cerrajero</item>
        <item>Tornero</item>
    </string-array>

    <!-- Main1 -->
    <string name="login">LOGIN Usuario</string>
    <string name="loginM">Login Maestro</string>
    <string name="registrarse">REGISTRARSE COMO USUARIO</string>
    <string name="registrarseM">REGISTRARSE COMO MAESTRO</string>
    <string name="desde2022">DESDE 2022</string>
    <string name="CONTACTO_PAGINAWEB_NOSOTROS">CONTACTO/PAGINA WEB/NOSOTROS</string>
    <string name="Terminos_y_condiciones_de_uso.">TERMINOS Y CONDICIONES DE USO*.</string>

    <!-- Registro -->

    <!-- Registro2 -->
    <string name="RegistroTXT">REGISTRO</string>
    <string name="Correo">Escriba correo</string>
    <string name="Password">Escriba contraseña</string>
    <string name="Nombres">Nombres Completo</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Comuna</string>
    <string name="Rut">Rut</string>
    <string name="REGISTRARUSUARIO">REGISTRARME</string>


    <!-- Login -->
    <string name="CorreoLogin">Correo electronico</string>
    <string name="PasswordLogin">Contraseña</string>
    <string name="INGRESAR">LOGIN </string>

    <!-- Dialogo no inicio de cecion -->
    <string name="Noinicio">No pudo iniciar sesion, intente nuevamente </string>
    <string name="ok_no_inicio">Entendido</string>

    <!-- Inicio -->
    <string name="uidtxt">UID: </string>
    <string name="uidPerfil"> -- </string>
    <string name="nombrestxt">Nombres: </string>
    <string name="nombresPerfil"> -- </string>
    <string name="correotxt">Correo:</string>
    <string name="correoPerfil"> -- </string>

    <!-- InicioMaestro -->

    <string name="MuidPerfil"> -- </string>
    <string name="MnombresPerfil"> -- </string>
    <string name="McorreoPerfil"> -- </string>
    <string name="MaestroOpcion">Usuarios</string>

    <!-- Menu -->
    <string name="foto_perfil">Correo: </string>

    <string name="MisDatosOpcion">Mis Datos</string>
    <string name="CrearPublicacionOpcion">Crear Post</string>
    <string name="PublicacionesOpciones">Publicaciones</string>
    <string name="UsuarioOpciones">Maestros</string>
    <string name="ChatsOpcion">Chats</string>


    <!-- Main3 -->
    <string name="imagenDato">a</string>
    <string name="uidDato">UID</string>
    <string name="NombreDato">Nombre</string>
    <string name="ApellidoDato">Apellido</string>
    <string name="CorreoDato">Correo</string>
    <string name="PasswordDato">Password</string>
    <string name="EdadDato">Edad</string>
    <string name="DireccionDato">Direccion</string>
    <string name="TelefonoDato">Telefono</string>
    <string name="ActualizarD">Actualizar Datos</string>
    <string name="MisDatosTXT">Mis Datos Personales</string>
    <string name="ActualizarP">Actualizar Pass</string>
    <string name="ActualizarIm">Actualizar Foto</string>
    <string name="SubirFoto">Subir Foto</string>


    <!--Cambio de contraseña-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="CorreoActualTXT">Correo Actual</string>


</resources>
