<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#04485f"
    android:backgroundTint="#04485f"
    android:layout_gravity="center"
    tools:context="app.dominio.testing.Inicio">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#04485f"
        >



        <!--Datos Recuperacion-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="6dp"
            android:background="#fff"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10sp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/foto_perfil_dism"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="#084C5F"
                        android:padding="3dp"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <!--uid-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Estadotxt"
                                android:textColor="#000" />


                            <TextView
                                android:id="@+id/EstadotxtD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/EstadotxtD"
                                android:textColor="#000" />


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!--Foto perfil-->

                        <!--Mas datos-->

                        <!--correo-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Direcciontxt"
                                android:textColor="#000" />

                            <TextView
                                android:id="@+id/DirecciontxtDm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/DirecciontxtD"
                                android:textColor="#000" />


                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <!--nombre-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nombrestxt"
                                android:textColor="#000" />

                            <TextView
                                android:id="@+id/nombresPerfilDism"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/nombresPerfilDis"
                                android:textColor="#000" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!--Especialidad-->


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Distancia"
                                android:textColor="#000" />

                            <TextView
                                android:id="@+id/kmm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/km"
                                android:textColor="#000" />


                        </androidx.appcompat.widget.LinearLayoutCompat>











                    </androidx.appcompat.widget.LinearLayoutCompat>









                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/MensajeEnviarM"
                        android:layout_width="90dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mensaje2"
                        android:text="@string/emailEnviar"
                        android:textColor="#fff" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </LinearLayout>




        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>


</androidx.cardview.widget.CardView>