<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#350C0C"
    android:backgroundTint="@color/teal_700"
    tools:context=".MainActivity">


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="332dp"
        android:layout_height="300dp"
        android:src="@drawable/gapee"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="28dp" />

    <Button
        android:id="@+id/registrarseM"
        android:layout_width="146dp"
        android:layout_height="70dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="96dp"
        android:hint="@string/registrarseM"
        android:textColor="#000"
        android:textColorHint="#000"
        android:background="@drawable/boton_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="146dp"
        android:layout_height="70dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="288dp"
        android:text="@string/login"
        android:textColor="#000"
        android:background="@drawable/boton_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonregister"
        android:layout_width="146dp"
        android:layout_height="70dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="196dp"
        android:text="@string/registrarse"
        android:textColor="#000"
        android:background="@drawable/boton_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>